--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -12,6 +12,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 server.servlet.context-path=/api
 
 spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
 api.security.token.secret=${JWT_SECRET:my-secret-key}
 
