--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -16,3 +16,6 @@ spring.h2.console.path=/h2-console
 
 api.security.token.secret=${JWT_SECRET:my-secret-key}
 
+app.login.admin=${LOGIN_ADMIN:admin}
+app.senha.admin=${SENHA_ADMIN:admin}
+
