Realizado algumas mudanças na estrutura e manipulação dos dados.

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -19,3 +19,10 @@ api.security.token.secret=${JWT_SECRET:my-secret-key}
 app.login.admin=${LOGIN_ADMIN:admin}
 app.senha.admin=${SENHA_ADMIN:admin}
 
+logging.level.root=INFO
+logging.level.org.springframework=DEBUG
+logging.level.br.com.suzintech.controle=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=TRACE
+
+
